# njin

./: .clang-format  .gitignore  Asset Representation.drawio  CMakeLists.txt  CMakePresets.json  README.md  Render.drawio  main.meshes  main.textures  vcpkg.json
mesh/: cc2.glb  cube.glb  player.glb
njin/: CMakeLists.txt  dev.cpp  main.cpp
njin/core/: CMakeLists.txt
njin/core/include/core/: MeshBuilder.h  RenderBuffer.h  RenderQueue.h  Renderable.h  Types.h  loader.h  njCamera.h  njMesh.h  njNode.h  njPrimitive.h  njRegistry.h  njRegistry.tpp  njScene.h  njSceneReader.h  njTexture.h  njVertex.h
njin/core/src/: MeshBuilder.cpp  RenderBuffer.cpp  RenderQueue.cpp  loader.cpp  njCamera.cpp  njMesh.cpp  njNode.cpp  njPrimitive.cpp  njScene.cpp  njSceneReader.cpp  njTexture.cpp  njVertex.cpp
njin/core/test/: MeshBuilder_test.cpp  njCamera_test.cpp  njMesh_test.cpp  njNode_test.cpp  njPrimitive_test.cpp  njRegistry_test.cpp  njSceneReader_test.cpp  njScene_test.cpp  njVertex_test.cpp
njin/ecs/: CMakeLists.txt
njin/ecs/include/ecs/: Components.h  EngineTypes.h  nj2DPhysicsSystem.h  nj3DPhysicsSystem.h  njArchetype.h  njCameraArchetype.h  njComponentMap.h  njComponentMap.tpp  njComponentMapInterface.h  njEnemyArchetype.h  njEngine.h  njEntityManager.h  njEntityManager.tpp  njInputSystem.h  njMovementSystem.h  njObjectArchetype.h  njPhysicsSystem.h  njPlayerArchetype.h  njRenderSystem.h  njSceneGraphSystem.h  njSystem.h
njin/ecs/physics/: CMakeLists.txt
njin/ecs/physics/include/physics/: BVH.h  BVHNode.h  PhysicsTypes.h
njin/ecs/physics/src/: BVH.cpp  BVHNode.cpp
njin/ecs/physics/test/: BVH_test.cpp
njin/ecs/src/: nj2DPhysicsSystem.cpp  nj3DPhysicsSystem.cpp  njCamaraArchetype.cpp  njEnemyArchetype.cpp  njEngine.cpp  njInputSystem.cpp  njMovementSystem.cpp  njObjectArchetype.cpp  njPhysicsSystem.cpp  njPlayerArchetype.cpp  njRenderSystem.cpp  njSceneGraphSystem.cpp  njSystem.cpp
njin/ecs/test/: njEntityManager_test.cpp  njMovementSystem_test.cpp  njSceneGraphSystem_test.cpp
njin/input/: CMakeLists.txt
njin/input/include/input/: EventHandler.h
njin/input/src/: EventHandler.cpp
njin/math/: CMakeLists.txt
njin/math/include/math/: njMat4.h  njMat4.tpp  njVec2.h  njVec2.tpp  njVec3.h  njVec3.tpp  njVec4.h  njVec4.tpp
njin/math/test/: njMat4_test.cpp  njVec2_test.cpp  njVec3_test.cpp  njVec4_test.cpp
njin/mnt/: CMakeLists.txt
njin/mnt/include/mnt/: Level.h  RoomBuilder.h  TownLevel.h
njin/mnt/src/: Level.cpp  RoomBuilder.cpp  TownLevel.cpp
njin/runtime/: CMakeLists.txt
njin/runtime/include/runtime/: njBuffer.h  njBuffer.tpp  njLevel.h
njin/runtime/test/: njBuffer_test.cpp
njin/util/: CMakeLists.txt
njin/util/include/util/: Accessor.h  Attributes.h  Buffer.h  BufferView.h  GLTFAsset.h  NodesBuilder.h  Primitive.h  file.h  json.h  stb.h
njin/util/src/: Accessor.cpp  Attributes.cpp  Buffer.cpp  BufferView.cpp  GLTFAsset.cpp  NodesBuilder.cpp  file.cpp  json.cpp  stb.cpp
njin/util/test/: Buffer_test.cpp
njin/vulkan/: CMakeLists.txt
njin/vulkan/include/vulkan/: AttachmentImages.h  Buffer.h  CommandBuffer.h  CommandPool.h  DescriptorPool.h  DescriptorPoolBuilder.h  DescriptorSet.h  DescriptorSetLayout.h  DescriptorSetLayoutBuilder.h  DescriptorSets.h  Fence.h  Framebuffer.h  FramebufferSet.h  FramebufferSets.h  GraphicsPipeline.h  GraphicsPipelineBuilder.h  GraphicsPipelines.h  Image.h  ImageBuilder.h  ImageSet.h  ImageView.h  Instance.h  LogicalDevice.h  PhysicalDevice.h  PipelineLayout.h  PipelineLayoutBuilder.h  RenderInfos.h  RenderPass.h  RenderPassBuilder.h  RenderPasses.h  RenderResources.h  Renderer.h  Renderer_DEPRECATE.h  Sampler.h  SamplerBuilder.h  Semaphore.h  ShaderModule.h  SubpassModule.h  Surface.h  Swapchain.h  (+10 more)
njin/vulkan/src/: AttachmentImages.cpp  Buffer.cpp  CommandBuffer.cpp  CommandPool.cpp  DescriptorPool.cpp  DescriptorPoolBuilder.cpp  DescriptorSet.cpp  DescriptorSetLayout.cpp  DescriptorSetLayoutBuilder.cpp  DescriptorSets.cpp  Fence.cpp  Framebuffer.cpp  FramebufferSet.cpp  FramebufferSets.cpp  GraphicsPipeline.cpp  GraphicsPipelineBuilder.cpp  GraphicsPipelines.cpp  Image.cpp  ImageBuilder.cpp  ImageView.cpp  Instance.cpp  LogicalDevice.cpp  PhysicalDevice.cpp  PipelineLayout.cpp  PipelineLayoutBuilder.cpp  RenderInfos.cpp  RenderPass.cpp  RenderPassBuilder.cpp  RenderPasses.cpp  RenderResources.cpp  Renderer.cpp  Renderer_DEPRECATE.cpp  Sampler.cpp  SamplerBuilder.cpp  Semaphore.cpp  ShaderModule.cpp  SubpassModule.cpp  Surface.cpp  Swapchain.cpp  VertexBuffers.cpp  (+7 more)
schema/: Asset Representation.drawio  Render Pass.drawio  cameras.schema.json  meshes.schema.json  nodes.schema.json  scene.schema.json  textures.schema.json
shader/: collider.frag  collider.vert  compile.bat  debug.frag  debug.vert  iso.frag  iso.vert  shader.frag  shader.vert  shader_2d.frag  shader_2d.vert
test_input/MeshRegistry/: invalid.json
test_input/njRegistry/: cube.glb  invalid.nodes  one.nodes  two.meshes
test_input/njScene/: valid.cameras  valid.meshes
test_input/njSceneReader/: cube.glb  invalid.scene  sphere.glb  valid.scene
